--- a/react-task-one/package.json
+++ b/react-task-one/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vite": "^7.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -22,9 +21,10 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0"
+    "globals": "^16.3.0",
+    "vite": "^7.0.4"
   },
   "engines": {
-  "node": ">=18"
-}
+    "node": ">=18"
+  }
 }
